Update for VS 2017

--- a/vld.ini
+++ b/vld.ini
@@ -40,7 +40,7 @@ VLD = on
 ;   Valid Values: yes, no
 ;   Default: no
 ;
-AggregateDuplicates = no
+AggregateDuplicates = yes
 
 ; Lists any additional modules to be included in memory leak detection. This can
 ; be useful for checking for memory leaks in debug builds of 3rd party modules
@@ -87,7 +87,7 @@ MaxTraceFrames =
 ;   Valid Values: ascii, unicode
 ;   Default: ascii
 ;
-ReportEncoding = ascii
+ReportEncoding = unicode
 
 ; Sets the report file destination, if reporting to file is enabled. A relative
 ; path may be specified and is considered relative to the process' working
